--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>13</version>
         </dependency>
 -->
+    	<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.10.1</version>
+    	</dependency>
     </dependencies>
   
     <build>
